# djangox-practice

./: db.sqlite3  pyproject.toml
config/: settings.py
pages/: urls.py  views.py
pages/migrations/: 0001_initial.py  0002_delete_snack.py
snacks/: admin.py  models.py  urls.py  views.py
templates/: snack-create.html  snack-detail.html  snack-list.html
