[tool.poetry]
name = "djangox-practice"
version = "0.1.0"
description = ""
authors = ["ALAN KARLO MANGUBAT <karlomangubat92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
django-allauth = "^0.44.0"
django-crispy-forms = "^1.11.1"
django-debug-toolbar = "^3.2"
whitenoise = "^5.2.0"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
